--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,33 @@
 body{
-  background: yellow;
+  background: gainsboro;
+}
+.triangle-stretch {
+  width: 0;
+  height: 0;
+  border-left: 90px solid transparent;
+  border-right: 90px solid transparent;
+  border-bottom: 100px solid red;
+  animation-name: bounce;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+@keyframes bounce {
+  0%{border-bottom: 100px solid blue;}
+  50%{border-bottom: 200px solid red;}
+  100%{border-bottom: 100px solid blue;}
+}
+
+.circle-fun{
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  border-radius: 50%;
+  animation-name: wuw;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+@keyframes wuw {
+  0%{width: 100px; height: 400px;}
+  50%{width: 400px; height: 100px;}
+  100%{width: 100px; height: 400px;}
 }
