--- a/css/main.css
+++ b/css/main.css
@@ -91,3 +91,18 @@ body{
   50%{height: 200px; width: 200px;}
   100%{}
 }
+
+.whatsit{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  box-shadow: 15px 15px 0 0 midnightblue;
+  animation-name: waxwane;
+  animation-duration: 7.6s;
+  animation-iteration-count: infinite;
+}
+@keyframes waxwane {
+  0%{}
+  50%{box-shadow: 40px 40px 0 0 cadetblue;}
+  100%{}
+}
