--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body{
 }
 .columns{
   display: grid;
-  grid-template: 300px / 33% 33% 33%;
+  grid-template: 320px / 33% 33% 33%;
 }
 
 .triangle-stretch {
@@ -97,7 +97,7 @@ body{
   height: 150px;
   border-radius: 50%;
   box-shadow: 35px 35px 0 0 midnightblue;
-  margin-top: 40px;
+  margin-top: 0px;
   animation-name: waxwane;
   animation-duration: 4.6s;
   animation-iteration-count: infinite;
@@ -106,4 +106,18 @@ body{
   0%{}
   50%{box-shadow: 70px 70px 20px -10px cadetblue;}
   100%{}
+}
+
+.dodad{
+  height: 200px;
+  width: 200px;
+  background-color: honeydew;
+  animation: zippy;
+  animation-duration: 7.2s;
+  animation-iteration-count: infinite;
+}
+@keyframes zippy {
+    0%{}
+    50%{transform: translateX(70vw) rotate(720deg); background-color: aquamarine;}
+    100%{transform: translateX(0) rotate(1440deg);}
 }
