--- a/css/main.css
+++ b/css/main.css
@@ -15,8 +15,26 @@ body{
   display: grid;
   grid-template: 320px / 33% 33% 33%;
 }
+#overlay {
+  position: fixed; /*Sit on top of the page content */
+  display: block; /* Hidden by default */
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;left: 0;right: 0;bottom: 0;
+  background-color: rgba(0,80,40,1); /* Black background with opacity */
+  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+  /* cursor: help; /* Add a pointer on hover */
+  animation-name: fade;
+  animation-duration: 10s;
+}
+@keyframes fade {
+  0%{background-color: rgba(0,0,0,0);}
+  100%{background-color: rgba(0,80,40,1);}
+
+}
 
 .triangle-stretch {
+  z-index: 1;
   width: 0;
   height: 0;
   border-left: 90px solid transparent;
